# Custom-OS

./: .gitattributes  Cargo.toml  README.md  build-image.bat  doctor.bat  install-deps.bat  run.bat  setup.bat
.github/workflows/: ci.yml
capabilities/: cap.image.adjust.json  cap.image.annotate.json  cap.image.collage.json  cap.image.view.json  cap.share.send.json
crates/capd/: Cargo.toml
crates/capd/src/: main.rs
crates/clade-facets/: Cargo.toml
crates/clade-facets/src/: ext.rs  lib.rs  magic.rs  text.rs
crates/clade-journal/: Cargo.toml
crates/clade-journal/src/: lib.rs
crates/clade-proto/: Cargo.toml
crates/clade-proto/schemas/: clade.capnp
crates/clade-proto/src/: lib.rs
crates/cortexd/: Cargo.toml
crates/cortexd/src/: main.rs
crates/gated/: Cargo.toml
crates/gated/src/: main.rs
crates/modeld/: Cargo.toml
crates/modeld/src/: main.rs  router.rs
crates/substrated/: Cargo.toml
crates/substrated/src/: bus.rs  cli.rs  config.rs  ctl.rs  daemon.rs  db.rs  exif.rs  hashid.rs  indexer.rs  lib.rs  main.rs  meta_text.rs  search.rs  vector.rs  watch.rs
crates/substrated/src/embed/: dct.rs  features.rs  mod.rs
crates/substrated/tests/: daemon_ctl.rs  e2e_demo.rs  indexer_ops.rs
crates/substrated/tests/common/: mod.rs
crates/weave/: Cargo.toml
crates/weave/src/: fb.rs  font.rs  input.rs  main.rs  scene.rs
crates/weaved/: Cargo.toml
crates/weaved/src/: bus.rs  main.rs  supervisor.rs
docs/: 00-vision.md  01-glossary.md  02-system-architecture.md  03-os-layer.md  04-ai-architecture.md  05-resident-mind.md  06-hybrid-ai.md  07-interaction-model.md  08-data-knowledge-model.md  09-privacy-trust.md  10-tech-stack.md  11-roadmap.md  12-risks-open-questions.md  HANDOFF.md  phase-1-plan.md
kernel/: README.md
kernel/buildroot-external/: Config.in  external.desc  external.mk
kernel/buildroot-external/board/clade/: kernel.fragment  post-build.sh
kernel/buildroot-external/board/clade/rootfs-overlay/etc/: os-release
kernel/buildroot-external/configs/: clade_x86_64_defconfig
kernel/buildroot-external/package/clade/: Config.in  clade.mk
mockups/: 00-boot.html  01-desktop-idle.html  02-photo-flow.html  03-pdf-flow.html  04-code-flow.html  05-text-notes-flow.html  06-materialize-dissolve.html  07-privacy-dial.html  08-delegation.html  09-workbench.html  index.html  shell.css  shell.js
tools/: build-image.sh  dev-run.sh  qemu-run.sh  run-clade.sh  setup.sh
