[workspace]
resolver = "2"
members = [
    "crates/clade-proto",
    "crates/clade-journal",
    "crates/weaved",
    "crates/weave",
    "crates/cortexd",
    "crates/substrated",
    "crates/modeld",
    "crates/gated",
    "crates/capd",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vcons002-ship-it/Custom-OS"

[workspace.dependencies]
clade-proto = { path = "crates/clade-proto" }
clade-journal = { path = "crates/clade-journal" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libc = "0.2"

# The Weave and the mind-plane services are latency-sensitive; keep release
# builds honest from day one.
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
