[package]
name = "clade-journal"
description = "The Journal: Clade's append-only, OS-level action log and undo engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
