[package]
name = "modeld"
description = "On-device model runtime: facets, embeddings, the router"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clade-proto = { workspace = true }
clade-facets = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
